# be-the-hero

./: .gitignore  README.md
backend/: .env.dist  Cargo.toml
backend/migrations/2020-03-27-184006_create_ngos/: down.sql  up.sql
backend/migrations/2020-03-27-185337_create_projects/: up.sql
backend/src/: controllers.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
frontend/: README.md  index.html
frontend/src/: lib.rs
