[package]
name = "be-the-hero"
version = "0.1.0"
authors = ["leocavalcante <lc@leocavalcante.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
diesel = { version = "1.0", features = ["sqlite"] }
dotenv = "0.9"